added stylesheet and selectors

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
+<div class="html-tut">
     <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
-    <img src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" />
-    <img width="500" alt="image not found" height="250" src="./assets/intro.jpg"/>
+   <!--- <img src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" /> -->
+    <!--- <img width="500" alt="image not found" height="250" src="./assets/intro.jpg"/> -->
     <h1>This is h1</h1>
     <h2>This is h2</h2>
     <h3>This is h3</h3>
@@ -34,6 +35,25 @@
             </ul>
         </div>
     </div>
-
+    <div class="my-css-rule">
+        <p> CSS Rules</p>
+    </div>
+</div>
+<div class="css-tut">
+    <div class="selectors">
+        <div>
+            <p>Praticing Type Selector </p>
+        </div>
+        <div id="id-selector">
+            <p>Practising ID Selector</p>
+        </div>
+        <div class="class-selector">
+            <p> Practicing Grouped Selectors</p>
+        </div>
+        <div class="class-selector">
+            <p><strong>Practising Grouped Selectors</strong> </p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
