--- a/index.html
+++ b/index.html
@@ -5,33 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <style>
+        .link{
+            text-decoration: none;
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
-    <img src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" />
-    <img width="500" alt="image not found" height="250" src="./assets/intro.jpg"/>
-    <h1>This is h1</h1>
-    <h2>This is h2</h2>
-    <h3>This is h3</h3>
-    <h4>This is h4</h4>
-    <h5>This is h5</h5>
-    <h6>This is h6</h6>
-    <p>This is <br> paragraph</p>
     <div>
-        This is a div
-        <div>
-            <ol>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
-            </ol>
-            <ul>
-                <li>===</li>
-                <li>===</li>
-                <li>===</li>
-                <li>===</li>
-            </ul>
+        <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
+        <img class="image1" src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" />
+        <img class="image2" width="500" alt="image not found" height="250" src="./assets/intro.jpg"/>
+        <h1 class="h">This is h1</h1>
+        <h2 class="h">This is h2</h2>
+        <h3 class="h">This is h3</h3>
+        <h4 class="h">This is h4</h4>
+        <h5 class="h">This is h5</h5>
+        <h6 class="h">This is h6</h6>
+        <p class="para">This is <br> paragraph</p>
+        <div class="div">
+            This is a div
+            <div>
+                <ol class="ordered_list">
+                    <li>a</li>
+                    <li>b</li>
+                    <li>c</li>
+                    <li>d</li>
+                </ol>
+                <ul class="unordered list">
+                    <li>===</li>
+                    <li>===</li>
+                    <li>===</li>
+                    <li>===</li>
+                </ul>
+            </div>
+            <div class="class_name">
+
+            </div>
+            <div class="class_name">
+
+            </div>
+            <div class="class_name">
+
+            </div>
         </div>
     </div>
 
