--- a/index.html
+++ b/index.html
@@ -87,5 +87,35 @@
     <div class="basicppt"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consectetur, augue eu faucibus pulvinar, nibh metus condimentum metus, nec venenatis velit ligula quis magna. Praesent rutrum quam et ultricies aliquet. Sed gravida augue ante, quis accumsan diam malesuada ut. Vivamus tristique risus sit amet ligula maximus, a laoreet nibh porta. Donec aliquam elementum iaculis. Nam ullamcorper lobortis condimentum. Nulla sed semper risus, vel blandit ex. Vestibulum cursus sodales nunc. Suspendisse sem lacus, suscipit in pellentesque ac, egestas vel turpis. Sed a ultricies urna. Aliquam pharetra ullamcorper erat, sit amet laoreet mauris malesuada id. Pellentesque bibendum efficitur dolor, eget aliquet leo commodo hendrerit.</p></div>
     <div class="basicsize"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
 </div>
+<div class="flex-parent">
+    <div class="flex-child">
+        
+    </div>
+    <div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div><div class="flex-child">
+
+    </div>
+</div>
 </body>
 </html>
