--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <p>This is <br> paragraph</p>
     <div>
         <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
-        <img class="image1" src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" />
-        <img class="image2" width="500" alt="image not found" height="250" src="./assets/intro.jpg"/>
+        <!-- <img class="image1" src="https://static.toiimg.com/thumb/msid-98748120,imgsize-88116,width-400,resizemode-4/98748120.jpg" /> -->
+        <!-- <img class="image2" width="500" alt="image not found" height="250" src="./assets/intro.jpg"/> -->
         <h1 class="h">This is h1</h1>
         <h2 class="h">This is h2</h2>
         <h3 class="h">This is h3</h3>
