--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <style>
@@ -12,7 +12,7 @@
             text-decoration: none;
             color: red;
         }
-    </style>
+    </style> 
 </head>
 <div class="html-tut">
     <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
@@ -23,7 +23,7 @@
     <h3>This is h3</h3>
     <h4>This is h4</h4>
     <h5>This is h5</h5>
-    <h6>This is h6</h6>
+    <h6 style="color:blue">This is h6</h6>
     <p>This is <br> paragraph</p>
     <div>
         <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
@@ -88,5 +88,3 @@
     <div class="basicppt"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consectetur, augue eu faucibus pulvinar, nibh metus condimentum metus, nec venenatis velit ligula quis magna. Praesent rutrum quam et ultricies aliquet. Sed gravida augue ante, quis accumsan diam malesuada ut. Vivamus tristique risus sit amet ligula maximus, a laoreet nibh porta. Donec aliquam elementum iaculis. Nam ullamcorper lobortis condimentum. Nulla sed semper risus, vel blandit ex. Vestibulum cursus sodales nunc. Suspendisse sem lacus, suscipit in pellentesque ac, egestas vel turpis. Sed a ultricies urna. Aliquam pharetra ullamcorper erat, sit amet laoreet mauris malesuada id. Pellentesque bibendum efficitur dolor, eget aliquet leo commodo hendrerit.</p></div>
     <div class="basicsize"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p></div>
 </div>
-</body>
-</html>
