specificity, sample blog page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <style>
-        .link{
-            text-decoration: none;
-            color: red;
-        }
-    </style> 
 </head>
 <div class="html-tut">
     <a class="link" target="_blank" href="https://www.google.com/">This is a link</a>
@@ -71,10 +65,10 @@
     <div class="box-model"> <h2>Box Model</h2> </div>
     <div class="selectors">
         <div>
-            <p>Praticing Type Selector </p>
+            <p class="selectors" style="color:black;">Praticing Type Selector </p>
         </div>
         <div id="id-selector">
-            <p>Practising ID Selector</p>
+            <p id="id-selector" class="selectors">Practising ID Selector</p>
         </div>
         <div class="class-selector">
             <p> Practicing Grouped Selectors</p>
@@ -93,7 +87,13 @@
         
     </div>
     <div class="flex-child">
+<!-- 
+    </div><div class="flex-child">
 
+    </div><div class="flex-child">
+<!-- 
+    </div><div class="flex-child"> --> -->
+<!-- 
     </div><div class="flex-child">
 
     </div><div class="flex-child">
@@ -108,13 +108,7 @@
 
     </div><div class="flex-child">
 
-    </div><div class="flex-child">
-
-    </div><div class="flex-child">
-
-    </div><div class="flex-child">
-
-    </div><div class="flex-child">
+    </div><div class="flex-child"> -->
 
     </div>
 </div>
